@@ -1983,6 +1983,12 @@ buildroot-1.8 2009-12-21 &lt;spudmonkey@racsa.co.cr&gt;
 <ul><pre>
 nuttx-5.15 2010-xx-xx Gregory Nutt &lt;spudmonkey@racsa.co.cr&gt;
 
+	* net/uip/uip_tcpaddsend.c and net/send.c -- Another place where the TCP sequence
+	  number problem "fixed" in 5.14 might occur.
+	* net/send.c -- Check if the destination IP address is in the ARP table.  If
+	  not, then don't consider the packet sent.  It won't be, an ARP packet will go
+	  out instead.
+
 pascal-2.1 2010-xx-xx Gregory Nutt &lt;spudmonkey@racsa.co.cr&gt;
 
 buildroot-1.9 2010-xx-xx <spudmonkey@racsa.co.cr>
